[gd_scene load_steps=15 format=3 uid="uid://c08ttg78rqsvj"]

[ext_resource type="Script" uid="uid://bhrw00eoqlu3q" path="res://mainMenu_2.gd" id="1_tbxbm"]
[ext_resource type="FontFile" uid="uid://q6c0g5avw7b" path="res://Tektur/Tektur-VariableFont_wdth,wght.ttf" id="2_20xwr"]
[ext_resource type="Texture2D" uid="uid://mtpli3e0i76s" path="res://2D Space Parallax Backgrounds/layers/complete.png" id="2_otx5p"]
[ext_resource type="Texture2D" uid="uid://b5orve30ljwgi" path="res://Assets/1. Free Hologram Interface Wenrexa/Button 1/Button Normal.png" id="3_80tsv"]

[sub_resource type="Animation" id="Animation_tbxbm"]
resource_name = "CountdownPulse"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CountdownWrapper:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.4, 1.4), Vector2(0.9, 0.9), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_20xwr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CountdownWrapper:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_80tsv"]
_data = {
&"CountdownPulse": SubResource("Animation_tbxbm"),
&"RESET": SubResource("Animation_20xwr")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_otx5p"]

[sub_resource type="Animation" id="Animation_otx5p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ReadyWrapperP1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.9, 0.9)]
}

[sub_resource type="Animation" id="Animation_80tsv"]
resource_name = "ZoomIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ReadyWrapperP1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.9, 0.9), Vector2(1.05, 1.05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_njjfu"]
_data = {
&"RESET": SubResource("Animation_otx5p"),
&"ZoomIn": SubResource("Animation_80tsv")
}

[sub_resource type="Animation" id="Animation_tudwm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.9, 0.9)]
}

[sub_resource type="Animation" id="Animation_njjfu"]
resource_name = "ZoomIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.9, 0.9), Vector2(1.05, 1.05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2tw83"]
_data = {
&"RESET": SubResource("Animation_tudwm"),
&"ZoomIn": SubResource("Animation_njjfu")
}

[node name="MainMenu_2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tbxbm")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = 1.0
offset_right = 638.0
offset_bottom = 360.0
texture = ExtResource("2_otx5p")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 294.0
offset_top = 148.0
offset_right = -306.0
offset_bottom = -174.0
alignment = 1

[node name="TipesWrapper" type="Node2D" parent="VBoxContainer"]
position = Vector2(-294, -148)

[node name="TipsButton" type="Button" parent="VBoxContainer/TipesWrapper"]
offset_left = 258.0
offset_top = 206.0
offset_right = 380.0
offset_bottom = 252.0
theme_override_fonts/font = ExtResource("2_20xwr")
text = "Game Tips"
icon = ExtResource("3_80tsv")
flat = true
icon_alignment = 1

[node name="CountdownWrapper" type="Node2D" parent="VBoxContainer"]
position = Vector2(-20, -8)

[node name="CountdownAnimator" type="AnimationPlayer" parent="VBoxContainer/CountdownWrapper"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_80tsv")
}

[node name="CountdownLabel" type="Label" parent="VBoxContainer/CountdownWrapper"]
offset_left = -12.0
offset_top = -31.0
offset_right = 559.0
offset_bottom = 99.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("2_20xwr")
theme_override_font_sizes/font_size = 100
text = "Press Start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ControlWrapper" type="Node2D" parent="VBoxContainer"]

[node name="ControlButton" type="Button" parent="VBoxContainer/ControlWrapper"]
offset_left = -36.0
offset_top = 2.0
offset_right = 86.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("2_20xwr")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_otx5p")
text = "Control
"
icon = ExtResource("3_80tsv")
flat = true
icon_alignment = 1

[node name="ReadyWrapperP1" type="Node2D" parent="."]
scale = Vector2(0.9, 0.9)

[node name="ReadyLabelP1" type="Label" parent="ReadyWrapperP1"]
offset_left = 79.0
offset_top = 315.0
offset_right = 935.0
offset_bottom = 445.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("2_20xwr")
theme_override_font_sizes/font_size = 100
text = "Player One Ready"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReadyAnimatorP1" type="AnimationPlayer" parent="ReadyWrapperP1"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_njjfu")
}

[node name="ReadyWrapperP2" type="Node2D" parent="."]
scale = Vector2(0.9, 0.9)

[node name="ReadyLabelP2" type="Label" parent="ReadyWrapperP2"]
offset_left = 426.0
offset_top = 317.0
offset_right = 1293.0
offset_bottom = 447.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("2_20xwr")
theme_override_font_sizes/font_size = 100
text = "Player Two Ready"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReadyAnimatorP2" type="AnimationPlayer" parent="ReadyWrapperP2"]
root_node = NodePath("../ReadyLabelP2")
libraries = {
&"": SubResource("AnimationLibrary_2tw83")
}
